# sneck_game

./: .gitignore  CMakeLists.txt  README.md  snake.c  state.c  state.h
